--- a/adbook.html
+++ b/adbook.html
@@ -301,7 +301,7 @@
 					}
 				}
 				$td = document.createElement("td");
-				$td.innerHTML = '<a data-op="edit" data-id="'+ entry.id +'">Edit</a> | <a data-op="remove" data-id="'+ entry.id +'">Remove</a>';
+				$td.innerHTML = '<a data-op="edit" data-id="'+ entry.id +'">Edit</a>  <a data-op="remove" data-id="'+ entry.id +'">Remove</a>';
 				$tr.appendChild($td);
 			},
 			tableRemove: function(entry) {
