--- a/adbook.html
+++ b/adbook.html
@@ -285,7 +285,7 @@
 					}
 				}
 				$td = document.createElement("td");
-				$td.innerHTML = '<a data-op="edit" data-id="'+ entry.id +'">Edit</a> | <a data-op="remove" data-id="'+ entry.id +'">Remove</a>';
+				$td.innerHTML = '<a data-op="edit" data-id="'+ entry.id +'">Edit</a>  <a data-op="remove" data-id="'+ entry.id +'">Remove</a>';
 				$tr.appendChild($td);
 				$tr.setAttribute("id", "entry-"+ entry.id);
 				Contacts.$table.appendChild($tr);
