--- a/adbook.html
+++ b/adbook.html
@@ -172,9 +172,9 @@
 				<tr id="contacts-head">
 					<th>ID</th>
 					<th>First name</th>
-					<th>Last name</th>
+					<th>Surname</th>
 					<th>Email</th>
-					<th>Actions</th>
+					<th>Operations</th>
 				</tr>
 			</table>
 		</div>
